--- a/VRChat/31/1166731.html
+++ b/VRChat/31/1166731.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OJcIu5+Y1ryL4CPXweCuxKeI0pOoHyPltnRnJJYHZvY="></script>
+    "AbP7Zh6CXZgQ4S30j931ZhQ/eR7oNubO6O7JwWKTfPI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料版あり]SDキャラ3Dモデル素体","description":"■モデル説明\n　本商品は３Dモデルの素体です。\n\n　仮ボーン・ウェイト設置済みです。\n　素体に加え、デフォルトの目・髪を同梱しています。\n　Blenderファイルの場合、ミラー・細分化曲面モディファイヤが適用前の状態で入ってます。FBXファイルはモディファイア適用前・適用済みの2種類入っています。\n\n　VRChat内でクローンできる設定のパブリックアバターとしての利用ができます。\n\n","url":"https://booth.pm/ja/items/1166731","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1166731/12e8d4fb-a26b-4e2e-8b26-9e465bc4f392_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OJcIu5+Y1ryL4CPXweCuxKeI0pOoHyPltnRnJJYHZvY="></script>
+    nonce="AbP7Zh6CXZgQ4S30j931ZhQ/eR7oNubO6O7JwWKTfPI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1166731/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               425
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1166731/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               425
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
