--- a/VRChat/57/1166657.html
+++ b/VRChat/57/1166657.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EwzHG9FTLAzHN+7jh9eYeGomzKHXhDxcyzXSPLuWwsg="></script>
+    "5aSRcdHwbJc4GBefEblLS76TcVT29kuQhgsTm3/NN/Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"10テクスチャこたつ","description":"VRChat向け3Dモデル『コタツ』\n\n通常コタツ△296ポリゴン\n収納コタツ△ 92ポリゴン\n\n1マテリアルにまとめており、コンパクトな構成になっています。\n\nVRChat向けではありますが、他の目的にもお使いいただくことが可能です。\n\n様々なテクスチャが10種類付属しているので、好きな柄を選ぶことができます。\n\nまた、UV展開図が付属しているので、ご自身でテクスチャを描いていただくことも可能です。","url":"https://booth.pm/ja/items/1166657","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/fd12f873-ecbb-4fe4-973b-3208cf7ebc52/i/1166657/62eadf8b-fd87-4f42-bd70-491e6ba71cfb_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EwzHG9FTLAzHN+7jh9eYeGomzKHXhDxcyzXSPLuWwsg="></script>
+    nonce="5aSRcdHwbJc4GBefEblLS76TcVT29kuQhgsTm3/NN/Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1166657/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1166657/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
