--- a/VRChat/38/1166738.html
+++ b/VRChat/38/1166738.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NaGDi9J6w3UBTYs2PSZ2gcj8MyeZsBtSWTYSZcgvaT0="></script>
+    "EOnOjB5BVm2t0MxEHAWq9nEi0u9hsEzKtsQMrv83gns="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】ウォーパルド印の「テーブル筐体」","description":"～更新～\n・今更ですがお布施用の項目を作りました。（内容は同じです。）\n\n\n・コントロールパネルを増やしたりマイナーチェンジするため、このバージョンは無料になります！お試しにどうぞ！！！\n\n・Unityパッケージを用意しました！！\nPrefabを置くだけでそれっぽくいけます。\nテクスチャ画像差し替えで簡単に画面を映せます！！\n\n\n古いゲームセンターなどにおいてあるであろう一般的な形のテーブル筐体です。\nVRCHATを想定としておりますが、自由に使って構いません。\nワールド置くだけで周りの空気感が一変すると思います。\n\n\nウォーパルド印の「テーブル筐体」\n\n\n・テーブル筐体.fbx\n\n・モニター画面.png（モニター用のテクスチャ。映したいものを黒い枠内に入れてください。\n\n・テーブルガラス.png（テーブル用のテクスチャ。「ガラス部」マテリアルを差し替えることによってインストラクションボードなどを置くことが可能です。\n\n・りーどみー.txt\n\n～使用方法～\n\nfbxファイルをUnityやBlenderなど各種ソフトにインポートしてご利用下さい。\n\n「透過ガラス部」マテリアルを透過させることによってよりリアルな筐体になります。\n\n\n～利用規約～\nデータのみの再配布を禁じます\n(自作モデルに組み込む等は可)\n\n改変、動画、同人、移植、商用、配信等自由です。\n","url":"https://booth.pm/ja/items/1166738","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1166738/f3513cde-4d32-4383-bee8-7338a3693982_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NaGDi9J6w3UBTYs2PSZ2gcj8MyeZsBtSWTYSZcgvaT0="></script>
+    nonce="EOnOjB5BVm2t0MxEHAWq9nEi0u9hsEzKtsQMrv83gns="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1166738/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1166738/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
