--- a/VRChat/40/1160540.html
+++ b/VRChat/40/1160540.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KyoMSVwyA2qe49V2tmJmhJL85kGLPS+NR9oJ0NvsVuA="></script>
+    "nybqMb7ezoHkve5DDa02K7I5yis9RYZMhgJx0Cz9j8A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　MNTG-11 テイン","description":"Vケット2 Future Terminal A　A上層15\n製作者　ガロス　@Garoth_suit\n\n本モデルは利用・配信などいずれかの形で使用した時点で、\n本利用規約に同意したものとします。\n\n●仕様\nこの製品はvrchat向けに制作されたhumanoid仕様の3Dモデルです。\n\nポリゴン数：11212ポリゴン(素体別)\nマテリアル：４種対応(Standard、まんまるシェーダー、UTS2.0、Reflax Shader)\n\t　　デフォルトはUTS2.0\n\nフルトラ適正：有り\nEye tracking：対応\nリップシンク：VRChat及びVRM兼用　全15種\n\nその他モーフ：表情用\nvrc.○○～　Eye tracking及びリップシンク用\nM_○○～　　表情用　口\nE_○○～　　表情用　目\nB_○○～　　表情用　眉\n\n素体のメッシュ及びテクスチャを付属しています。\n\nunitypackageは2017.4.15f1でしか動作確認をしておりません。\nその他のバージョンで使用する場合はご注意ください。\n\n●商業利用\n本データのR-18への利用や改変については自由です。\nまた、営利目的での利用も可能です。ゲーム等ご自由にお使いください。\nこのモデルを利用した作品を制作した場合は連絡を下されば大変喜びます。\n\n●禁則事項\n本データの改変が可能な状態での販売は禁止します。\n本データを利用したことによる損害に対する責任は負わないものとします。\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n本データ及びその改変モデルの著作権については大本の製作者である ガロス に帰属します。","url":"https://booth.pm/ja/items/1160540","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/1160540/5e35d671-56ea-46fc-a718-e471a33c2cfa_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KyoMSVwyA2qe49V2tmJmhJL85kGLPS+NR9oJ0NvsVuA="></script>
+    nonce="nybqMb7ezoHkve5DDa02K7I5yis9RYZMhgJx0Cz9j8A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1160540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1160540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
